--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,17 @@
   display: flex;
   width: 100%;
 }
+
+.errorMsg {
+  color: red;
+}
+
+@media screen and (max-width: 820px) {
+  .sidebar {
+    display: none;
+  }
+
+  .rightbar {
+    display: none;
+  }
+}
