style: fix height

--- a/src/components/editProfile/EditProfile.css
+++ b/src/components/editProfile/EditProfile.css
@@ -1,7 +1,7 @@
 .editProfile-container {
   box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1),
     0px 10px 15px -3px rgba(0, 0, 0, 0.1);
-  height: 650px;
+  height: max-content;
   width: 500px;
   margin: 25px auto;
   padding: 2px 0;
