style: update profile edit button

--- a/src/components/profile/Profile.css
+++ b/src/components/profile/Profile.css
@@ -16,9 +16,8 @@
 }
 
 .profile-edit-icon {
-  position: absolute;
-  top: 260px;
-  left: 492px;
+  display: flex;
+  justify-content: center;
 }
 
 .profileCoverImg {
