style: responsiveness added

--- a/src/components/profile/Profile.css
+++ b/src/components/profile/Profile.css
@@ -1,5 +1,6 @@
 .profile {
   display: flex;
+  max-width: 100%;
 }
 
 .profileRight {
@@ -62,4 +63,10 @@
 
 .profileRightBottom {
   display: flex;
+}
+
+@media screen and (max-width: 820px) {
+  .profileRightTop {
+    display: none;
+  }
 }
