--- a/src/components/timeline/rightbar/Rightbar.css
+++ b/src/components/timeline/rightbar/Rightbar.css
@@ -106,3 +106,9 @@
 .rightbarFollowBtn:focus {
   outline: none;
 }
+
+@media screen and (max-width: 820px) {
+  .rightbar {
+    display: none;
+  }
+}
