--- a/src/components/timeline/topbar/Topbar.css
+++ b/src/components/timeline/topbar/Topbar.css
@@ -100,7 +100,19 @@
 }
 
 @media screen and (max-width: 820px) {
-  .searchbar {
+  .topbarCenter {
     display: none;
+  }
+
+  .topbarLeft {
+    display: none;
+  }
+
+  .searchIcon {
+    display: none;
+  }
+
+  .topbarContainer {
+    margin: 0px;
   }
 }
