--- a/src/components/auth/Login/Login.css
+++ b/src/components/auth/Login/Login.css
@@ -96,3 +96,17 @@
 .loginBtnCenter {
   text-align: center;
 }
+
+@media screen and (max-width: 820px) {
+  .loginLeft {
+    display: none;
+  }
+
+  .loginWrapper {
+    width: 90%;
+  }
+
+  .loginregistrationButton {
+    width: 75%;
+  }
+}
