--- a/src/components/auth/register/Register.css
+++ b/src/components/auth/register/Register.css
@@ -97,3 +97,17 @@
   cursor: pointer;
   color: white;
 }
+
+@media screen and (max-width: 820px) {
+  .registerLeft {
+    display: none;
+  }
+
+  .registerWrapper {
+    width: 90%;
+  }
+
+  .registerLoginBtn {
+    width: 75%;
+  }
+}
