--- a/src/components/timeline/post/PostCard.css
+++ b/src/components/timeline/post/PostCard.css
@@ -106,9 +106,12 @@
 .postCommentUser {
   min-width: 20%;
   font-size: 14px;
+  display: flex;
+  align-items: center;
 }
 
 .postCommentContent {
+  margin-left: 8px;
   font-size: 13px;
   word-spacing: 2px;
   font-weight: bold;
