--- a/src/components/timeline/topbar/Topbar.css
+++ b/src/components/timeline/topbar/Topbar.css
@@ -13,6 +13,12 @@
   flex: 3;
 }
 
+.menu-icon {
+  margin-right: 10px;
+  display: none;
+  cursor: pointer;
+}
+
 .topbarLogo {
   font-size: 24px;
   margin-left: 20px;
@@ -99,6 +105,8 @@
   cursor: pointer;
 }
 
+
+
 @media screen and (max-width: 820px) {
   .topbarCenter {
     display: none;
@@ -106,6 +114,10 @@
 
   .topbarLeft {
     display: none;
+  }
+
+  .menu-icon {
+    display: inline-block;
   }
 
   .searchIcon {
